--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -13,52 +13,71 @@ jobs:
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
           body: |
-                  found ci-merge-check ${{ github.event.client_payload.pull_request.number }}
-      
-      # Timestamp will be used to create cache key
-      - name: timestamp
-        run: echo "timestamp=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
+            Merge check is running at: <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>
+            PR: ${{ github.event.client_payload.pull_request.number }}
 
       - name: Find the latest workflow run comment
         uses: peter-evans/find-comment@v2
-        id: fc
+        id: find-comment
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
           body-includes: 'Tests running at:'
+          comment-author: github-actions[bot]
           direction: last
-        
-      # - name: Check ci test result
-      #   run: |
-      #     set -o pipefail
-      #     export retval=0
-      #     export prnumber=${{ github.event.client_payload.pull_request.number }}
-      #     echo "prnumber=$prnumber"
-      #     workflowid=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/issues/$prnumber/comments|grep "Tests running at:"|grep -Eo 'https://github[^ >]+'|tail -1|awk -F/ '{print $8}'`
-      #     export retval=`expr $retval + $?`
-      #     echo "workflowid=$workflowid"
-      #     runsatatus=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/$workflowid/jobs?per_page=100|jq -r '[ .jobs[] | select(.name | contains("ci-test-result")) | .conclusion ]'|grep -v  '\[\|\]'|sed "s/\"//g"|sed "s/ //g"`
-      #     export retval=`expr $retval + $?`
-      #     echo "runsatatus=$runsatatus"
-      #     statuslink=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/pulls/$prnumber|jq -r '[ ._links |.statuses | .href]'|grep http|sed "s/\"//g"|sed "s/ //g"`
-      #     export retval=`expr $retval + $?`
-      #     echo $retval
-      #     echo "statuslink=$statuslink"
-      #     pendingchecks=`curl --silent $statuslink|jq -r '.[]'|jq -r '[ select(.state | contains("pending")) | .context  ]'`
-      #     set +o pipefail
-      #     pendingchecks=`echo $pendingchecks|grep -v  '\[\|\]'|grep -v 'cypress\|Vercel\|DeepSource'|wc -l`
-      #     export retval=`expr $retval + $pendingchecks`
-      #     echo $retval
-      #     exit $retval  
+      
+      - name: Get the workflow run_id
+        id: workflow
+        run: |
+          echo "run_id=$(echo '${{ steps.find-comment.outputs.comment-body }}' | grep -o 'runs/[0-9]\+' | cut -d/ -f2)" >> $GITHUB_OUTPUT
+      
+      - name: Get ci-test-result status from the run_id
+        id: ci-test-result-status
+        run: |
+          run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100|jq -r '[ .jobs[] | select(.name | contains("ci-test-result")) | .conclusion ]'|grep -v  '\[\|\]'|sed "s/\"//g"|sed "s/ //g"`
+          echo "run_status=$run_status" >> $GITHUB_OUTPUT
+
+      - name: get status-checks from pr
+        id: pr_status_check
+        run: |
+          status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{github.event.pull_request.head.sha}}"
+          curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("pending")) | .context' >> ~/check1
+          echo "status=`grep -c -E 'cypress\|Vercel\|DeepSource' ~/check1`" >> $GITHUB_OUTPUT
+
+      - name: get status-checks from check suite
+        id: suite_status_check
+        run: |
+          check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{github.event.pull_request.head.sha}}/check-runs"
+          curl --silent "$check_runs_link"|jq -r '.check_runs[] | select(.conclusion | contains("success") | not ) | .name' >> ~/check2
+          echo "status=`grep -c -E 'ci-test-result|Check for Test Plan Approved label' ~/check2`" >> $GITHUB_OUTPUT
+
+      - name: Verify all the checks
+        run: |
+          if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failure" ]; then
+            exit 1
+          elif [ ${{ steps.pr_status_check.outputs.status }} != 0 ]; then
+            exit 1
+          elif [ ${{ steps.suite_status_check.outputs.status }} != 0 ]; then
+            if [ $(grep -c 'Check for Test Plan Approved label' ~/check2 ) != 0 ]; then
+              exit 1
+            else
+              exit 0
+            fi
+          else
+            exit 1
+          fi
+
+      - name: automerge
+        if: success()
+        run: |
+          echo "can merge now."
+        # uses: "pascalgn/automerge-action@v0.15.5"
+        # env:
+        #   GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           
-      # #- name: automerge
-      # #  uses: "pascalgn/automerge-action@v0.15.5"
-      # #  env:
-      # #    GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          
-      # - name: Add a comment on the PR with status
-      #   if: failure()
-      #   uses: peter-evans/create-or-update-comment@v2
-      #   with:
-      #     issue-number: ${{ github.event.client_payload.pull_request.number }}
-      #     body: |
-      #       Won't merge.Other checks failing. 
+      - name: Add a comment on the PR with status
+        if: failure()
+        uses: peter-evans/create-or-update-comment@v2
+        with:
+          issue-number: ${{ github.event.client_payload.pull_request.number }}
+          body: |
+            Can't merge. Other checks failing.
