data genearte page heading dedup

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -80,8 +80,8 @@
     "cypress-log-to-output": "^1.1.2",
     "dayjs": "^1.10.6",
     "deep-diff": "^1.0.2",
-    "design-system": "npm:@appsmithorg/design-system@2.1.5",
-    "design-system-old": "npm:@appsmithorg/design-system-old@1.1.4",
+    "design-system": "npm:@appsmithorg/design-system@2.1.5-alpha.18",
+    "design-system-old": "npm:@appsmithorg/design-system-old@1.1.4-alpha.8",
     "downloadjs": "^1.4.7",
     "exceljs": "^4.3.0",
     "fast-deep-equal": "^3.1.3",
