--- a/app/client/packages/design-system/headless/package.json
+++ b/app/client/packages/design-system/headless/package.json
@@ -14,6 +14,7 @@
     "@react-aria/focus": "^3.11.0",
     "@react-aria/interactions": "^3.14.0",
     "@react-aria/utils": "^3.16.0",
+    "@react-aria/visually-hidden": "^3.8.0",
     "@react-spectrum/utils": "^3.9.0",
     "@react-stately/toggle": "^3.5.1",
     "@react-types/button": "^3.7.1",
