--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Add a comment on the PR if failed
         if: always()
         run: |
-          echo "${{step.verify_checks.outputs.msg}}"
+          echo "${{steps.verify_checks.outputs.msg}}"
         # uses: peter-evans/create-or-update-comment@v2
         # with:
         #   issue-number: ${{ github.event.client_payload.pull_request.number }}
