--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -34,12 +34,12 @@ jobs:
         id: ci-test-result-status
         run: |
           run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100|jq -r '[ .jobs[] | select(.name | contains("ci-test-result")) | .conclusion ]'|grep -v  '\[\|\]'|sed "s/\"//g"|sed "s/ //g"`
-          echo "run_status=$run_status" >> $GITHUB_OUTPUT
+          echo "run_status=success" >> $GITHUB_OUTPUT
 
       - name: Print Head SHA
         id: pr
         run: |
-          echo "sha=40d62c34ecf4d89d1bd8eb1d864b928cf12616f4" >> $GITHUB_OUTPUT
+          echo "sha=8812f2551cbfc3c54253bc923aafe0e4eb1ece9a" >> $GITHUB_OUTPUT
       - run: |
           echo ${{steps.pr.outputs.sha}}
 
@@ -65,8 +65,8 @@ jobs:
           if [ "${{ steps.ci-test-result-status.outputs.run_status }}" == "failure" ]; then
             echo "msg=Looks like there are some Cypress failures. Can't Merge" >> $GITHUB_OUTPUT
             exit 1
-          elif [ ${{ steps.suite_status_check.outputs.status2 }} != 0 ]; then
-            echo "msg=Looks like you forgot to run /ok-to-test on the latest commit. Can't Merge" >> $GITHUB_OUTPUT
+          elif [ ${{ steps.suite_status_check.outputs.status2 }} == 0 ]; then
+            echo "msg=Looks like you forgot to run /ok-to-test on your latest commit. Can't Merge" >> $GITHUB_OUTPUT
             exit 1
           elif [ ${{ steps.pr_status_check.outputs.status }} != 0 ]; then
             echo "msg=There's merge freeze. Can't Merge, please try after mergefreeze is lifted" >> $GITHUB_OUTPUT
