--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Print Head SHA
         id: pr
         run: |
-          echo "sha=8812f2551cbfc3c54253bc923aafe0e4eb1ece9a" >> $GITHUB_OUTPUT
+          echo "sha=40d62c34ecf4d89d1bd8eb1d864b928cf12616f4" >> $GITHUB_OUTPUT
       - run: |
           echo ${{steps.pr.outputs.sha}}
 
@@ -48,6 +48,7 @@ jobs:
         run: |
           status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{steps.pr.outputs.sha}}"
           curl --silent "$status_link"|jq -r '.[]'|jq -r 'select(.state | contains("success") | not) | .context' >> ~/check1
+          echo "mergefreeze" >> ~/check1
           echo "status=`grep -c -E 'cypress\|Vercel\|DeepSource' ~/check1`" >> $GITHUB_OUTPUT
 
       - name: get status-checks from check suite
