ci: Fix for ci-merge-check workflow (#22511)
## Description
- Fix for ci-merge-check workflow

## Type of change
- ci-merge-check.yml


## How Has This Been Tested?
- Github actions

## Checklist:
### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -87,10 +87,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PULL_REQUEST: ${{ github.event.client_payload.pull_request.number }}
-          MERGE_REQUIRED_APPROVALS: "1"
+          MERGE_REQUIRED_APPROVALS: 1
 
       - name: Add comment once merge is success-full
-        if: steps.automerge.outputs.mergeResult == "merged"
+        if: steps.automerge.outputs.mergeResult == 'merged'
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
@@ -98,7 +98,7 @@ jobs:
             Pull request ${{ steps.automerge.outputs.pullRequestNumber }} Auto-merged!
 
       - name: Comment if it is not merged
-        if: steps.automerge.outputs.mergeResult != "merged"
+        if: steps.automerge.outputs.mergeResult != 'merged'
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
