ci: Modified the logic to pick the last comment for ci-merge-check (#22517)
## Description
- Modified the logic to pick the last comment for ci-merge-check

## Type of change
- ci-merge-check.yml

## How Has This Been Tested?
- Github actions

## Checklist:
### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -21,7 +21,7 @@ jobs:
         id: find-comment
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
-          body-includes: 'Tests running at:'
+          body-includes: 'Appsmith External Integration Test Workflow'
           comment-author: github-actions[bot]
           direction: last
       
@@ -67,8 +67,11 @@ jobs:
           elif [ ${{ steps.suite_status_check.outputs.status1 }} == 0 ]; then
             echo "msg=Hurray!🎉 Proceeding to Merge!!!" >> $GITHUB_OUTPUT
             exit 0
-          else
+          elif [ ${{ steps.suite_status_check.outputs.status1 }} == 1 ]
             echo "msg=Either get 'Test Plan Approved' or 'skip-testPlan' added and try again!" >> $GITHUB_OUTPUT
+            exit 1
+          else
+            echo "msg=Some checks has failed. Can't merge" >> $GITHUB_OUTPUT
             exit 1
           fi
 
