--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -48,7 +48,7 @@ jobs:
         id: suite_status_check
         run: |
           check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/a0936f9c899eabfc9a0dd953a206247881dac0e6/check-runs"
-          check_run_result = `curl --silent "$check_runs_link"`
+          check_run_result = `curl --silent $check_runs_link`
           echo "status1=`echo $check_run_result|jq -r '[.check_runs[]|select (select(.name | contains("Test Plan Approved")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
           echo "status2=`echo $check_run_result|jq -r '[.check_runs[] | select(.name | contains("ci-test-result"))] | length'`" >> $GITHUB_OUTPUT
 
