--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -34,32 +34,32 @@ jobs:
         id: ci-test-result-status
         run: |
           run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
-          echo "run_result= `echo $run_status|jq -r '[.jobs[]|select(select(.name|contains("ci-test-result"))|.conclusion | contains("failure"))]|length'`" >> $GITHUB_OUTPUT
-          echo "ci_test_status= `echo $run_status|jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
-          echo "perf_test_status= `echo $run_status|jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
+          echo "ci_test_result=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT                                    
+          echo "ci_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
+          echo "perf_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
 
       - name: get status-checks from pr
         id: pr_status_check
         run: |
-          status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{github.event.client_payload.pull_request.head.sha}}"
-          echo "status=`curl --silent "$status_link"|jq -r '[.[]|select(select(.context|contains("mergefreeze")) | .state | contains("success") | not)]|length'`" >> $GITHUB_OUTPUT
+          status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/a0936f9c899eabfc9a0dd953a206247881dac0e6"
+          echo "status=`curl --silent $status_link | jq -r '[.[] | select( select( .context | contains("mergefreeze")) | .state | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
 
       - name: get status-checks from check suite
         id: suite_status_check
         run: |
-          check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{github.event.client_payload.pull_request.head.sha}}/check-runs"
-          check_run_result = `curl --silent "$check_runs_link"`
-          echo "status1=`echo $check_run_result|jq -r '[.check_runs[]|select (select(.name|contains("Test Plan Approved"))|.conclusion|contains("success")|not)]|length'`" >> $GITHUB_OUTPUT
-          echo "status2=`echo $check_run_result|jq -r '[.check_runs[]|select(.name|contains("ci-test-result"))]|length'`" >> $GITHUB_OUTPUT
+          check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/a0936f9c899eabfc9a0dd953a206247881dac0e6/check-runs"
+          check_run_result=`curl --silent $check_runs_link`
+          echo "status1=`echo $check_run_result | jq -r '[.check_runs[]|select (select(.name | contains("Test Plan Approved")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
+          echo "status2=`echo $check_run_result | jq -r '[.check_runs[] | select(.name | contains("ci-test-result"))] | length'`" >> $GITHUB_OUTPUT
 
       - name: Verify all the checks
         id: verify_checks
         run: |
-          if [ ${{ steps.ci-test-result-status.outputs.run_status }} == 1 ]; then
-            if [ ${{ steps.ci-test-result-status.outputs.ci_test_status }} == 1 ]; then
+          if [ ${{ steps.ci_test_result_status.outputs.ci_test_result }} == 1 ]; then
+            if [ ${{ steps.ci_test_result_status.outputs.ci_test_status }} == 1 ]; then
               echo "msg=Looks like there are some Cypress failures. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
-            elif [ ${{ steps.ci-test-result-status.outputs.perf_test_status }} == 1 ]; then
+            elif [ ${{ steps.ci_test_result_status.outputs.perf_test_status }} == 1 ]; then
               echo "msg=Looks like Perf-Test is failed. Contact perf team to get their confirmation. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
             fi
