--- a/app/client/cypress/locators/Applications.json
+++ b/app/client/cypress/locators/Applications.json
@@ -2,5 +2,7 @@
     "copyUrl": ".t--copy-url",
     "forkButton": ".t--fork-app",
     "shareButton": "button:contains('Share')",
-    "placeholderTxt": "//input[@placeholder='Enter email address(es)']"
+    "placeholderTxt": "//input[@placeholder='Enter email address(es)']",
+    "placeholderTxtEE": "//input[@placeholder='Enter email address(es) or group(s)']"
+
 }
