--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Get ci-test-result status from the run_id
         id: ci-test-result-status
         run: |
-          run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
-          echo "ci_test_result=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT                                    
-          echo "ci_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
-          echo "perf_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
+          ci_status_link="https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100"
+          echo "ci_test_result=`curl --silent $ci_status_link | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT                                    
+          echo "ci_test_status=`curl --silent $ci_status_link | jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
+          echo "perf_test_status=`curl --silent $ci_status_link | jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
       - run: |
           echo ${{ steps.ci_test_result_status.outputs.ci_test_result }}
           echo ${{ steps.ci_test_result_status.outputs.ci_test_status }}
