fixing  ci-merge-check

--- a/.github/workflows/upgrade-appsmith-tests.yml
+++ b/.github/workflows/upgrade-appsmith-tests.yml
@@ -34,16 +34,11 @@ jobs:
       - name: Get ci-test-result status from the run_id
         id: ci_test_result_status
         run: |
-          run_status=$(curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100)
-          ci_test_result=$(echo "$run_status" | jq '[ .jobs[] | select(.name | contains("ci-test-result")) | select(.conclusion | contains("success") | not) ] | length')
-          echo $ci_test_result
-          echo "ci_test_result=$ci_test_result" >> $GITHUB_OUTPUT
-          ci_test_status=$(echo "$run_status" | jq '[ .jobs[] | select(.name | contains("ci-test ")) | select(.conclusion | contains("success") | not) ] | length')
-          echo $ci_test_status
-          echo "ci_test_status=$ci_test_status" >> $GITHUB_OUTPUT
-          perf_test_status=$(echo "$run_status" | jq '[ .jobs[] | select(.name | contains("perf-test")) | select(.conclusion | contains("success") | not) ] | length')
-          echo $perf_test_status
-          echo "perf_test_status=$perf_test_status" >> $GITHUB_OUTPUT
+          run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
+          echo "ci_test_result=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT                                    
+          echo "ci_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
+          echo "perf_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
+
       - run: |
           echo ${{ steps.ci_test_result_status.outputs.ci_test_result }}
           echo ${{ steps.ci_test_result_status.outputs.ci_test_status }}
@@ -67,10 +62,10 @@ jobs:
         id: verify_checks
         run: |
           if [ ${{ steps.ci_test_result_status.outputs.ci_test_result }} == 1 ]; then
-            if [ ${{ steps.ci_test_result_status.outputs.ci_test_status }} == 1 ]; then
+            if [ ${{ steps.ci_test_result_status.outputs.ci_test_status }} > 0 ]; then
               echo "msg=Looks like there are some Cypress failures. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
-            elif [ ${{ steps.ci_test_result_status.outputs.perf_test_status }} == 1 ]; then
+            elif [ ${{ steps.ci_test_result_status.outputs.perf_test_status }} > 0 ]; then
               echo "msg=Looks like Perf-Test is failed. Contact perf team to get their confirmation. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
             fi
