--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -31,7 +31,7 @@ jobs:
           echo "run_id=$(echo '${{ steps.find-comment.outputs.comment-body }}' | grep -o 'runs/[0-9]\+' | cut -d/ -f2)" >> $GITHUB_OUTPUT
       
       - name: Get ci-test-result status from the run_id
-        id: ci-test-result-status
+        id: ci_test_result_status
         run: |
           run_status=`curl --silent https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
           echo "ci_test_result=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT                                    
@@ -56,10 +56,10 @@ jobs:
         id: verify_checks
         run: |
           if [ ${{ steps.ci_test_result_status.outputs.ci_test_result }} == 1 ]; then
-            if [ ${{ steps.ci_test_result_status.outputs.ci_test_status }} == 1 ]; then
+            if [ ${{ steps.ci_test_result_status.outputs.ci_test_status }} > 0 ]; then
               echo "msg=Looks like there are some Cypress failures. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
-            elif [ ${{ steps.ci_test_result_status.outputs.perf_test_status }} == 1 ]; then
+            elif [ ${{ steps.ci_test_result_status.outputs.perf_test_status }} > 0 ]; then
               echo "msg=Looks like Perf-Test is failed. Contact perf team to get their confirmation. Can't Merge" >> $GITHUB_OUTPUT
               exit 1
             fi
