--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -96,6 +96,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PULL_REQUEST: ${{ github.event.client_payload.pull_request.number }}
           MERGE_REQUIRED_APPROVALS: 1
+          MERGE_METHOD: squash
+          MERGE_LABELS: ""
 
       - name: Add comment once merge is success-full
         if: steps.automerge.outputs.mergeResult == 'merged'
