--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -96,8 +96,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PULL_REQUEST: ${{ github.event.client_payload.pull_request.number }}
           MERGE_REQUIRED_APPROVALS: 1
-          MERGE_METHOD: squash
           MERGE_LABELS: ""
+          MERGE_READY_STATE: "clean,has_hooks,unknown,unstable,blocked"
 
       - name: Add comment once merge is success-full
         if: steps.automerge.outputs.mergeResult == 'merged'
@@ -113,4 +113,8 @@ jobs:
         with:
           issue-number: ${{ github.event.client_payload.pull_request.number }}
           body: |
-            Please try /ci-merge-check after at-least 1 peer approval. Can't merge this now.
+            Auto merge has been failed. Probably for the below reasons:
+            1. The minimum approval requirement has not been met.
+            2. There are some failed checks.
+
+            Please ask someone with merge access to review and merge.
